[package]
name = "w25"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
embassy-time = { version = "0.5.0", default-features = false }
embedded-hal-async = "1.0.0"
log = { version = "0.4.29", optional = true }
sub-array = "0.1.1"
thiserror = { version = "2.0.17", default-features = false }

[features]
log = ["dep:log"]
